[tool.poetry]
name = "signal-processing-tutorial"
version = "0.0.1"
description = "signal processing"
authors = ["Masaki Fujiwara <fujiwara@pgv.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
numpy = "^1.23.4"
scipy = "^1.9.3"
mne = "^1.2.1"
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
